# raven2mqtt

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.example.yml  pyproject.toml  raven2mqtt.example.toml
.github/workflows/: docker.yml  release.yml  test.yml
src/raven2mqtt/: __init__.py  __main__.py  config.py  discovery.py  models.py  mqtt.py  parser.py  serial_client.py  service.py
systemd/: raven2mqtt.service
tests/: test_cli.py  test_config.py  test_discovery.py  test_models.py  test_mqtt.py  test_parser.py  test_service.py
